# comfyui-photoshop

./: .gitignore  Backend.py  FIX_Rquierments.bat  License  README.md  __init__.py  data.json  node-Photoshop-noplugin.py  node-Photoshop.py  photoshop.py  pyproject.toml  requirements.txt  version.json  workflow.py
.github/workflows/: publish.yaml  publish.yml
Install_Plugin/: 3e6d64e0_PS.ccx  installer.py
Install_Plugin/3e6d64e0/: PS_actions.js  connection.js  debug.json  front.js  index.html  manifest.json
Install_Plugin/3e6d64e0/assets/: index-BP3korav.css  index-B_-tWO9a.js  index-C3nL6Ca2.css  index-CivaK9bn.js  index-Cr8bcwaX.js  index-Cxwyns2h.css  index-CyDqztvK.js  index-D8bku3Sl.css  index-DJkoG_AE.js  index-IjPqtHVz.js  index-M4jqe6pR.js  index-Ww1dSUDi.js  (+5 more)
Install_Plugin/3e6d64e0_1.4.0/: PS_actions.js  backend.js  connection.js  icon-style.css  index.html  manifest.json
Install_Plugin/3e6d64e0_1.4.2/: animation.js  backend.js  index.html  manifest.json  style.css
Install_Plugin/3e6d64e0_1.4.3/: connection.js  front.js  index.html  manifest.json  start.js  style.css
PreviewFiles/: version.json
data/: config.json
data/PreviewFiles/: version.json
data/js/: connection.js  manager.js  nodestyle.js  photopea-editor.js
data/ps_inputs/: config.json
data/workflows/: sd15_en-US.json  sd15_ja-JP.json  sd15_ko-KR.json  sd15_workflow.json  sd15_zh-CN.json  sd15_zh-TW.json
js/: connection.js  manager.js  menu.js  nodestyle.js
py/: Backend.py  http_server.py  node-Photoshop-noplugin.py  node-Photoshop.py  nodePlugin.py  nodeRemoteConnection.py
(+2 files in other folders)
