[project]
name = "comfyui-photoshop"
description = "🔹 Powerfull bridge to Photoshop by NimaNzrii"
version = "1.9.2"
license = "LICENSE"
dependencies = [""]

[project.urls]
Repository = "https://github.com/NimaNzrii/comfyui-photoshop"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "NimaNzrii"
DisplayName = "comfyui-photoshop"
Icon = ""