[project]
name = "comfyui-photoshop"
description = "🔹 Powerfull bridge to Photoshop by NimaNzrii"
version = "1.9.3"
license = {file = "LICENSE"}
dependencies = ["msgpack", "aiofiles", "GitPython", "PyGithub", "asyncio", "numpy"]

[project.urls]
Repository = "https://github.com/NimaNzrii/comfyui-photoshop"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "nimanzrii"
DisplayName = "comfyui-photoshop"
Icon = "data/comfyIcons/logo.svg"
